# IR2117

./: .gitignore  Documento sin título 1  arith_mean.cpp
Statistics/: MakeFile  Makefile  args.cc  arith_mean  arith_mean.cc  capture.txt  median.cc  mode.cc  mode_maps.cc  utils.cc  utils.hpp
Sum/: sum.cc  sum_ab.cc  sumv1.cpp  sumv2.cpp  sumv3.cpp  sumv4.cpp  sumv5.cpp
arith_mean/: aritm_mean_prog.cpp
arith_mean_def/: arith_mean.cpp
install/: local_setup.sh  setup.sh
install/olympic_interfaces/share/olympic_interfaces/: package.bash  package.zsh
log/: latest_build
maps/: mode_maps.cpp
math_problem/: math_problem.cpp  math_problem_v1.cpp  math_problem_v2.cpp  math_problem_v3.cpp  math_problem_v4.cpp
matrices/: Makefile  SumMatriz.cpp  SumMaxMatriz.cpp  apuntes_diapos.txt  example.cc
median/: media.cpp  median.cpp  moda.cpp
modular_programming/: automatic_building.cpp  utils.cc
new_ros2_ws/: .gitignore  frames.gv
new_ros2_ws/examples/sum/: CMakeLists.txt  package.xml  sum.cpp
new_ros2_ws/examples/topics/: package.xml  publisher.cpp  subscriber.cpp
new_ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
new_ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
new_ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
new_ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
new_ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
new_ros2_ws/src/learning_tf2_cpp/launch/: turtle_tf2_demo.launch.py
new_ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
new_ros2_ws/src/urdf/: 01-myfirst.urdf  02-multipleshapes.urdf
practicar_ros/src/examples/sum/: CMakeLists.txt  package.xml  sum.cpp
practicar_ros/src/examples/topics/: CMakeList.txt  CMakeLists.txt  package.xml  publisher.cpp  subscriber.cpp
quadratic/: quadratic.cpp
sum_ab/: sum_ab_v1.cpp  sum_ab_v2.cpp  sum_ab_v3.cpp  sum_ab_v4.cpp
sum_ab_def/: definitivo.cpp  prueba.cpp  prueba_def_sum_ab.cpp  prueba_sum_ab.cpp  prueba_suma_ab.cpp
tb3_ws/: .gitignore
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: detector_test.launch.py  triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp
tb3_ws/src/olympic/: CMakeLists.txt  olympic_rings.launch.py  package.xml
tb3_ws/src/olympic/src/: .rings_action_client.cpp.kate-swp  rings.cpp  rings_action_client.cpp  rings_action_server.cpp
tb3_ws/src/olympic_interfaces/: CMakeLists.txt  package.xml
tb3_ws/src/olympic_interfaces/action/: rings.action
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/launch/: square.py
tb3_ws/src/robot_trajectory/src/: square.cpp  square_odom.cpp  wandering.cpp
